--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#D3D3D3"
+    android:background="#1C4A1E"
     tools:ignore="ExtraText">
 
 
@@ -42,21 +42,47 @@
     </ImageView>
 
 
-    <TextView
-        android:id="@+id/score"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:padding="8dp"
-        android:text="Score: 0"
-        android:textColor="#000000"
-        android:textSize="30dp"
-        app:layout_constraintBottom_toTopOf="@id/player"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newGame"
-        app:layout_constraintVertical_bias="1.0" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView3"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="-15dp"
+        android:backgroundTint="@color/black_200"
+        android:padding="12dp"
+        app:cardCornerRadius="50dp"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintBottom_toTopOf="@+id/player"
+        app:layout_constraintEnd_toEndOf="@+id/player"
+        app:layout_constraintStart_toStartOf="@+id/player">
 
+
+
+        <TextView
+            android:id="@+id/score"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="8/18"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@id/player"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/newGame"
+            app:layout_constraintVertical_bias="1.0" />
+
+    </androidx.cardview.widget.CardView>
+
+    <ImageView
+        android:id="@+id/BJ"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginBottom="-25dp"
+        android:visibility="visible"
+        app:layout_constraintBottom_toTopOf="@+id/cardView3"
+        app:layout_constraintEnd_toEndOf="@+id/cardView3"
+        app:layout_constraintStart_toStartOf="@+id/cardView3"
+        app:srcCompat="@drawable/ic_jackpot" />
     <Button
         android:id="@+id/newGame"
         android:layout_width="wrap_content"
@@ -64,7 +90,7 @@
         android:layout_marginTop="32dp"
         android:width="120dp"
         android:background="#696969"
-        android:text="NEW GAME?"
+        android:text="NEW GAME"
         android:textColor="@android:color/white"
         android:textSize="17dp"
         android:visibility="visible"
@@ -100,18 +126,18 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/money"
+        android:id="@+id/BetCoinsBtn"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        android:layout_marginTop="32dp"
         android:layout_marginRight="16dp"
         android:gravity="center"
         android:orientation="horizontal"
         android:padding="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/bet"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/player">
+        app:layout_constraintTop_toBottomOf="@+id/ActionBtn">
 
         <androidx.cardview.widget.CardView
             android:layout_width="40dp"
@@ -215,27 +241,49 @@
             tools:text="1000 $" />
     </androidx.cardview.widget.CardView>
 
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView2"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:padding="20dp"
+        app:cardCornerRadius="16dp"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/betValue"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:drawableTop="@drawable/ic_bet"
+            tools:text="1000 $" />
+    </androidx.cardview.widget.CardView>
+
     <Button
         android:id="@+id/bet"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
         android:padding="10dp"
         android:text="bet"
         android:textSize="20dp"
-        app:layout_constraintEnd_toEndOf="@+id/money"
-        app:layout_constraintStart_toStartOf="@+id/money"
-        app:layout_constraintTop_toBottomOf="@+id/money" />
+        app:layout_constraintBottom_toBottomOf="@+id/cardView"
+        app:layout_constraintEnd_toEndOf="@+id/BetCoinsBtn"
+        app:layout_constraintStart_toStartOf="@+id/BetCoinsBtn"
+        app:layout_constraintTop_toTopOf="@+id/cardView" />
 
     <LinearLayout
+        android:id="@+id/ActionBtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bet">
+        app:layout_constraintTop_toBottomOf="@+id/player">
 
         <Button
             android:id="@+id/stand"
@@ -303,20 +351,12 @@
             android:textSize="20dp" />
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/BJ"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:visibility="invisible"
-        android:layout_marginBottom="-15dp"
-        app:layout_constraintBottom_toTopOf="@+id/score"
-        app:layout_constraintEnd_toEndOf="@+id/score"
-        app:srcCompat="@drawable/ic_jackpot" />
 
     <ImageView
         android:id="@+id/imageView4"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
