--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -8,6 +8,35 @@
     tools:ignore="ExtraText">
 
 
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView4"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:backgroundTint="@color/black_200"
+        android:padding="12dp"
+        app:cardCornerRadius="50dp"
+        app:cardUseCompatPadding="true"
+        app:layout_constraintEnd_toEndOf="@+id/player"
+        app:layout_constraintStart_toStartOf="@+id/player"
+        app:layout_constraintTop_toBottomOf="@+id/dealer">
+
+
+        <TextView
+            android:id="@+id/dealerScore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:text="8/18"
+            android:textColor="@color/black"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@id/player"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/newGame"
+            app:layout_constraintVertical_bias="1.0" />
+
+    </androidx.cardview.widget.CardView>
+
     <LinearLayout
         android:id="@+id/dealer"
         android:layout_width="0dp"
@@ -46,7 +75,7 @@
         android:id="@+id/cardView3"
         android:layout_width="80dp"
         android:layout_height="80dp"
-        android:layout_marginBottom="-15dp"
+        android:layout_marginBottom="-16dp"
         android:backgroundTint="@color/black_200"
         android:padding="12dp"
         app:cardCornerRadius="50dp"
@@ -56,9 +85,8 @@
         app:layout_constraintStart_toStartOf="@+id/player">
 
 
-
         <TextView
-            android:id="@+id/score"
+            android:id="@+id/playerScore"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -83,35 +111,34 @@
         app:layout_constraintEnd_toEndOf="@+id/cardView3"
         app:layout_constraintStart_toStartOf="@+id/cardView3"
         app:srcCompat="@drawable/ic_jackpot" />
+
+
+    <!--//PLAYER'S CARDS-->
     <Button
         android:id="@+id/newGame"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:width="120dp"
         android:background="#696969"
-        android:text="NEW GAME"
+        android:text="replay"
         android:textColor="@android:color/white"
-        android:textSize="17dp"
+        android:textSize="12dp"
         android:visibility="visible"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/player"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/dealer"
         app:layout_constraintVertical_chainStyle="spread_inside" />
 
-
-    <!--//PLAYER'S CARDS-->
     <LinearLayout
         android:id="@+id/player"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
         android:gravity="center"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/ActionBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/newGame"
-        app:layout_constraintVertical_bias="0.35000002">
+        app:layout_constraintStart_toStartOf="parent">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/playCards"
@@ -136,8 +163,7 @@
         android:padding="8dp"
         app:layout_constraintBottom_toTopOf="@+id/bet"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ActionBtn">
+        app:layout_constraintRight_toRightOf="parent">
 
         <androidx.cardview.widget.CardView
             android:layout_width="40dp"
@@ -278,12 +304,11 @@
         android:id="@+id/ActionBtn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
+        app:layout_constraintBottom_toTopOf="@+id/BetCoinsBtn"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/player">
+        app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/stand"
